--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "hjs": "*"
   },
   "devDependencies": {
-    "grunt": "^0.4.4",
-    "grunt-contrib-less": "^0.10.0",
-    "grunt-contrib-watch": "^0.6.0",
-    "grunt-express-server": "^0.4.13",
-    "grunt-contrib-uglify": "^0.4.0"
+    //"grunt": "^0.4.4",
+    //"grunt-contrib-less": "^0.10.0",
+    //"grunt-contrib-watch": "^0.6.0",
+    //"grunt-express-server": "^0.4.13",
+    //"grunt-contrib-uglify": "^0.4.0"
   }
 }
